# aws-ip-ranges

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml  update.yml
bump_version/: Cargo.toml
data/: ip-ranges.json
