[package]
name = "aws-ip-ranges"
version = "0.1509.0"
description = "https://ip-ranges.amazonaws.com/ip-ranges.json as const structs"
license = "MIT/Apache-2.0"
repository = "https://github.com/Turbo87/aws-ip-ranges"
keywords = ["aws"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["bump_version"]

[build-dependencies]
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
